--- a/index.html
+++ b/index.html
@@ -1,22 +1,42 @@
 <!DOCTYPE html>
 <html>
 <head>
-    ARGENTINA
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="index.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"&quot; rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"&quot;
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
 </head>
 <body>
 
 <h1>
+
+</h1>
+<div class = "container" >
     <table>
-        <tr>
-            <td colspan="4"> ARGENTINA</td>
+        <tr class="arg"> 
+            <td colspan="5"> ARGENTINA</td>
         </tr>
-        <tr>
-            <td> SALTA</td>
+        <tr class="salta">
+            <td><INPUT TYPE="checkbox" NAME="salta0"></td>
+            <td class = "saltaTit"> SALTA</td>
             <td> <img src="saltapg.png" alt="saltapg"></td>
             <td>
-                1⁄2 pensión c/ aéreo
-                1⁄2 pensión c/ bus
-                Desayuno s/ traslados
+                <ul>
+                  <li> 1⁄2 pensión c/ aéreo</li> 
+                  <li>   1⁄2 pensión c/ bus</li> 
+                  <li>Desayuno s/ traslados</li> 
+                </ul>
+                
             </td>
             <td> 
                 <INPUT TYPE="checkbox" NAME="salta1">
@@ -24,7 +44,8 @@
                 <INPUT TYPE="checkbox" NAME="salta3">
             </td> 
         </tr>
-        <tr>
+        <tr class = "mdz">
+            <td><INPUT TYPE="checkbox" NAME="mdz0"></td>
             <td> MENDOZA</td>
             <td> <img src="mdzpg.png" alt="saltapg"></td>
             <td>
@@ -37,7 +58,8 @@
                 <INPUT TYPE="checkbox" NAME="mdz2">
                 <INPUT TYPE="checkbox" NAME="mdz3">
         </tr>
-        <tr>
+        <tr class = "nqn">
+            <td><INPUT TYPE="checkbox" NAME="nqn0"></td>
             <td> NEUQUÉN</td>
             <td> <img src="nqnpg.png" alt="saltapg"></td>
             <td>
@@ -50,7 +72,7 @@
                 <INPUT TYPE="checkbox" NAME="nqn2">
                 <INPUT TYPE="checkbox" NAME="nqn3">
         </tr>
-        <td>
+        <td class = "form">
             NOMBRE<BR><INPUT TYPE="text" NAME="NOMBRE">
             </FORM>
         </td>
@@ -62,8 +84,7 @@
             FORMA DE PAGO<INPUT TYPE="checkbox" NAME="efec"> Efectivo <INPUT TYPE="checkbox" NAME="trj"> Tarjeta
         </td>
     </table>
-</h1>
-
+</div>
 <p></p>
 
 </body>
