Se añadieron estilos a todos las filas

--- a/index.html
+++ b/index.html
@@ -28,61 +28,80 @@
         </tr>
         <tr class="salta">
             <td><INPUT TYPE="checkbox" NAME="salta0"></td>
-            <td class = "saltaTit"> SALTA</td>
-            <td> <img src="saltapg.png" alt="saltapg"></td>
+            <td class = "Tit"> SALTA</td>
+            <td class="IMG"> <img src="saltapg.png" alt="saltapg"></td>
             <td>
                 <ul>
                   <li> 1⁄2 pensión c/ aéreo</li> 
-                  <li>   1⁄2 pensión c/ bus</li> 
-                  <li>Desayuno s/ traslados</li> 
+                  <li> 1⁄2 pensión c/ bus</li> 
+                  <li> Desayuno s/ traslados</li> 
                 </ul>
                 
             </td>
             <td> 
-                <INPUT TYPE="checkbox" NAME="salta1">
-                <INPUT TYPE="checkbox" NAME="salta2">
-                <INPUT TYPE="checkbox" NAME="salta3">
+                <ul class = "checkbox3">
+                    <li><INPUT TYPE="checkbox" NAME="salta1"></li>
+                    <li><INPUT TYPE="checkbox" NAME="salta2"></li>
+                    <li><INPUT TYPE="checkbox" NAME="salta3"></li>
+                </ul>
             </td> 
         </tr>
         <tr class = "mdz">
             <td><INPUT TYPE="checkbox" NAME="mdz0"></td>
-            <td> MENDOZA</td>
-            <td> <img src="mdzpg.png" alt="saltapg"></td>
+            <td class = "Tit"> MENDOZA</td>
+            <td class = "IMG"> <img src="mdzpg.png" alt="saltapg"></td>
             <td>
-                1⁄2 pensión c/ aéreo
-                1⁄2 pensión c/ bus
-                Desayuno s/ traslados
+                <ul>
+                    <li> 1⁄2 pensión c/ aéreo</li> 
+                    <li>   1⁄2 pensión c/ bus</li> 
+                    <li>Desayuno s/ traslados</li> 
+                  </ul>
             </td>
             <td> 
-                <INPUT TYPE="checkbox" NAME="mdz1">
-                <INPUT TYPE="checkbox" NAME="mdz2">
-                <INPUT TYPE="checkbox" NAME="mdz3">
+                <ul class = "checkbox3">
+                    <li><INPUT TYPE="checkbox" NAME="salta1"></li>
+                    <li><INPUT TYPE="checkbox" NAME="salta2"></li>
+                    <li><INPUT TYPE="checkbox" NAME="salta3"></li>
+                </ul>
+            </td>
         </tr>
         <tr class = "nqn">
             <td><INPUT TYPE="checkbox" NAME="nqn0"></td>
-            <td> NEUQUÉN</td>
-            <td> <img src="nqnpg.png" alt="saltapg"></td>
+            <td class = "Tit"> NEUQUÉN</td>
+            <td class = "IMG"> <img src="nqnpg.png" alt="saltapg"></td>
             <td>
-                1⁄2 pensión c/ aéreo
-                1⁄2 pensión c/ bus
-                Desayuno s/ traslados
+                <ul>
+                    <li> 1⁄2 pensión c/ aéreo</li> 
+                    <li>   1⁄2 pensión c/ bus</li> 
+                    <li>Desayuno s/ traslados</li> 
+                  </ul>
             </td>
             <td> 
-                <INPUT TYPE="checkbox" NAME="nqn1">
-                <INPUT TYPE="checkbox" NAME="nqn2">
-                <INPUT TYPE="checkbox" NAME="nqn3">
+                <ul class = "checkbox3">
+                    <li><INPUT TYPE="checkbox" NAME="salta1"></li>
+                    <li><INPUT TYPE="checkbox" NAME="salta2"></li>
+                    <li><INPUT TYPE="checkbox" NAME="salta3"></li>
+                </ul>
+            </td>
         </tr>
-        <td class = "form">
-            NOMBRE<BR><INPUT TYPE="text" NAME="NOMBRE">
-            </FORM>
-        </td>
-        <td>
-            APELLIDO<BR><INPUT TYPE="text" NAME="Apellido">
-            </FORM>
-        </td>
-        <td>
-            FORMA DE PAGO<INPUT TYPE="checkbox" NAME="efec"> Efectivo <INPUT TYPE="checkbox" NAME="trj"> Tarjeta
-        </td>
+        <tr class = "form">
+            <td>
+                <label>Nombre</label>
+                <BR><INPUT TYPE="text" NAME="Nombre">
+                </FORM>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                APELLIDO<BR><INPUT TYPE="text" NAME="Apellido">
+                </FORM>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                FORMA DE PAGO<INPUT TYPE="checkbox" NAME="efec"> Efectivo <INPUT TYPE="checkbox" NAME="trj"> Tarjeta
+            </td>
+        </tr>
     </table>
 </div>
 <p></p>
